k8s/apigateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: apigateway
          image: ghcr.io/mostaphaaaa/microservicessample-apigateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
