k8s/apigateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway
  namespace: microservices
spec:
  selector:
    app: apigateway
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
